Change padding on .jumbotron to fix mobile responsive layout bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,7 +263,7 @@ body {
 
 .jumbotron {
     background-color: transparent;
-    padding-top: 10rem;
+    padding-top: 1rem;
     padding-right: 3rem;
     text-align: right;
     margin: 3rem;
